--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
 		<section class="header-section-centr">
 			<div class="header-section-centr-title">
 		       <p>Интернет-магазин
-			   строительных материалов
+			   строительных материалов<br>
 			   и инструментов для ремонта</p>
 			</div>
 			<div class="header-section-centr-contacts">
-			    <p>
-			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
-				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-			    </p>
+			    <div class="header-section-centr-tel"><a class="header-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+				<div class="header-section-centr-address"><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 		    </div>
 			<div class="header-section-centr-authorization">
-			    <a class="header-section-centr-login-link" href="blank.html">Вход</a>
-			    <a class="header-section-centr-reg-link" href="blank.html">Регистрация</a>
+			    <div class="header-section-centr-login-link"><a href="blank.html">Вход</a></div>
+			    <div class="header-section-centr-reg-link"><a href="blank.html">Регистрация</a></div>
 			</div>
 		</section>
 		<nav class="header-navigation">	
@@ -53,9 +51,10 @@
 	
 	<main class="main">
 	
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</h1>
+        <div class="container"><h1>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</h1></div>
 		
 		<section class="main-promo">
+			<div class="container">
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
 				    <h2>Материалы</h2>
@@ -98,9 +97,11 @@
 					<div class="main-promo-buttom"><a href="blank.html">бесплатно</a></div>				
 				</li>
 			</ul>
+		    </div>
 		</section>
 		
 		<section class="main-product">
+			<div class="container">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
 				<div class="link-button"><a href="blank.html">все популярные товары</a></div>
@@ -110,10 +111,10 @@
 					<div class="img-product">
 					    <img src="img/snippet-32961.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
 				    </div>
-					<span class="new">NEW</span>
-					<a class="main-product-item-link" href="blank.html">
+					<!-- <span class="new">NEW</span> -->
+					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 9000</h3>
-					</a>
+					</a></div>
 						<div class="old-price"><span>32500 Р.</span></div>
 						<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
@@ -121,7 +122,7 @@
 					<div class="img-product">
 						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 					</div>
-					<span class="new">NEW</span>
+					<!-- <span class="new">NEW</span> -->
 					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
@@ -132,7 +133,7 @@
 					<div class="img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
-					<span class="new">NEW</span>
+					<!-- <span class="new">NEW</span> -->
 					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -143,7 +144,7 @@
 					<div class="img-product">
 					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
-					<span class="new">NEW</span>
+					<!-- <span class="new">NEW</span> -->
 					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
@@ -151,9 +152,11 @@
 						<div class="button-product"><a href="#">12500 Р.</a></div>					
 				</li>
 			</ul>
+			</div>
 		</section>
 		
 		<section class="main-producer">
+			<div class="container">
 			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
 				<div class="link-button"><a class="link-button" href="blank.html">все производители</a></div>
@@ -161,7 +164,7 @@
 			<ul class="main-producer-list">
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/bosch.jpg" width="126" height="37" alt="Логотип компании BOSCH">
+						<img class="main-producer-img" src="img/bosch.jpg" width="126" height="37" alt="Логотип компании BOSCH">
 					</a>
 				</li>
 				<li class="main-producer-item">
@@ -200,9 +203,11 @@
 					</a>
 				</li>
 			</ul>
+			</div>
 		</section>
 		
 		<section class="main-services">
+			<div class="container">
 			<h2>Сервисы</h2>
 			<p>Хороший интернет-магазин отличается от плохого не только ценами!
 				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -221,7 +226,7 @@
 						<img src="img/car.png" width="619" height="283" alt="Картинка автомобиля">
 				</div>
 
-				<div class="index-label">
+				<!-- <div class="index-label">
 				    <input type='radio' id='guarantee' name='guarantee'>
 					<label for='guarantee'>Гарантия</label>
 				</div>
@@ -237,10 +242,12 @@
 				<div class="main-services-item">
 					<h3>Кредит</h3>
 					<p>Ккккккккккккккккккккккккккккккк</p>
-				</div>
+				</div> -->
+			</div>
 			</div>
 		</section>
-		
+
+		<div class="container">
 		<section class="main-info">
 		    <div class="main-info-text">
 			    <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
@@ -263,6 +270,7 @@
 				<div class="link-button main-info-map-link"><a href="blank.html">Заблудились? Напишите нам!</a></div>
 			</div>
 		</section>
+	    </div>
 		
     </main>
 	
@@ -295,17 +303,19 @@
 	
 	    <section class="footer-socials">
 		<div class="container-footer-socials">
-	    <p>© 2010–2019 Компания «Техномарт»
-		   Все права защищены</p>
+			<div class="footer-socials-blok">
+		        <p>© 2010–2019 Компания «Техномарт»
+				   Все права защищены</p>
+			</div>
 		<ul class="footer-socials-list">
             <li><a href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a></li>
             <li><a href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a></li>
             <li><a href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a></li>
         </ul>
-	    <p>Обратная связь:
+	    <p class="footer-socials-mail">Обратная связь:<br>
         <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p>Разработано -
+        <p class="footer-socials-site">Разработано -<br>
         <a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
 		</p>
 	    </div>	
@@ -319,10 +329,50 @@
 			<div class="link-button"><a href="#">ОФОРМИТЬ ЗАКАЗ</a></div>
 			<div class="button-white"><a href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
 		</div>
-        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+        <a href="#" class="modal-order-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
+	
+    <section class="modal-map">
+	   
+		<a href="#" class="modal-map-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+		<img src="img/map.png" width="1736" height="779" alt="Карта с нашим адресом">
+		
+    </section>
+	
+	<section class="modal-question">
 
-    <section class="modal modal-authorization">
+		<form class="modal-question-form" action="https://echo.htmlacademy.ru" method="post">
+
+            <div class="container-name-email">
+				<div class="container-name-field">
+			        <label class="name-field position1" for="name-field">Ваше имя:</label>
+			        <input class="name-field position2" type="text" name="name" id="name-field" placeholder="Имя Фамилия">
+		        </div>
+			
+				<div class="container-email-field">
+			        <label class="email position3" for="email-field">Ваш e-mail:</label>
+			        <input class="email position4" type="email" name="email" id="email-field" placeholder="email@example.com">
+				</div>
+			</div>
+			
+			<div class="container-comment">
+			<label class="comment" for="comment-field">Текст письма:</label>
+			
+			<textarea class="comment" name="comment" id="comment-field" rows="3" placeholder="В свободной форме"
+			></textarea>
+		    </div>
+			
+			<div class="submit">
+				<input type="submit" value="отправить">
+			</div>
+
+			<a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+
+		</form>
+		
+	</section>
+	
+	<section class="modal modal-authorization">
         <h2>Войти в личный кабинет</h2>
         <p>Введите пожалуйста свой логин и пароль</p>
         <!-- Здесь будет форма логина и пароля -->
@@ -333,40 +383,6 @@
         <h2>Создать личный кабинет</h2>
         <!-- Здесь будет форма логина и пароля -->
         <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
-    </section>
-	
-    <section class="modal-map">
-
-		<img src="img/map.png" width="1736" height="779" alt="Карта с нашим адресом">
-		<a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
-		
-    </section>
-	
-	<section class="modal-question">
-
-		<form action="https://echo.htmlacademy.ru" method="post">
-
-			<label class="name-field" for="name-field">Ваше имя:</label>
-			
-			<input class="name-field" type="text" name="name" id="name-field" placeholder="Имя Фамилия">
-			
-			<label class="email" for="email-field">Ваш e-mail:</label>
-			
-			<input class="email" type="email" name="email" id="email-field" placeholder="email@example.com">
-			
-			<label class="comment" for="comment-field">Текст письма:</label>
-			
-			<textarea class="comment" name="comment" id="comment-field" rows="3" placeholder="В свободной форме"
-			></textarea>
-			
-			<div class="submit">
-				<input type="submit" value="отправить">
-			</div>
-
-			<a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
-
-		</form>
-		
     </section>
 
   </body>
