--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 	
         <div class="container"><h1>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</h1></div>
 		
-		<section class="main-promo">
-			<div class="container">
+		<section class="main-promo container">
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
 				    <h2>Материалы</h2>
@@ -97,11 +96,9 @@
 					<div class="main-promo-buttom"><a href="blank.html">бесплатно</a></div>				
 				</li>
 			</ul>
-		    </div>
 		</section>
 		
-		<section class="main-product">
-			<div class="container">
+		<section class="main-product container">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
 				<div class="link-button"><a href="blank.html">все популярные товары</a></div>
@@ -152,11 +149,9 @@
 						<div class="button-product"><a href="#">12500 Р.</a></div>					
 				</li>
 			</ul>
-			</div>
 		</section>
 		
-		<section class="main-producer">
-			<div class="container">
+		<section class="main-producer container">
 			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
 				<div class="link-button"><a class="link-button" href="blank.html">все производители</a></div>
@@ -203,7 +198,6 @@
 					</a>
 				</li>
 			</ul>
-			</div>
 		</section>
 		
 		<section class="main-services">
@@ -366,7 +360,7 @@
 				<input type="submit" value="отправить">
 			</div>
 
-			<a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+			<a href="#" class="modal-question-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
 
 		</form>
 		
