Декоративные элементы на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 			<div class="container-header-logo">
             <div class="header-logo"><a href="index.html"><img src="img/logo-header.png" width="220" height="47" alt="Логотип компании Техномарт"></a></div>
 			<form class="header-search">
-                <input type="search" name="q" placeholder="Поиск:">
+                <input class="header-search-input" type="search" name="q" placeholder="Поиск:">
             </form>
 			<a class="header-link-bookmarks" href="#">Закладки: 0</a>
 			<a class="header-link-basket header-link-basket-catalog" href="#">Корзина: 10</a>
@@ -102,11 +102,11 @@
                 
 		    </div>
 
-				<h2>Список товаров</h2>
+				<h2 class="visually-hidden">Список товаров</h2>
 				
 			    <ul  class="catalog-products-list">
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<!-- <span class="new">NEW</span> -->
@@ -117,7 +117,7 @@
 						<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -128,7 +128,7 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -139,7 +139,7 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -150,7 +150,7 @@
 					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -161,7 +161,7 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->
@@ -172,7 +172,7 @@
 					<div class="button-product"><a href="#">12500 Р.</a></div>				
 				</li>
 				<li class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -183,7 +183,7 @@
 					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->	
@@ -194,7 +194,7 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="img-product">
+					<div class="container-product">
 					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
 					<!-- <span class="new">NEW</span> -->
