--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 	
 	</footer>
 	
-	<section class="modal-order">
+	<section class="modal-order none">
         <p>Товар добавлен в корзину!</p>
         <div class="submit-order">
 			<div class="link-button"><a href="#">ОФОРМИТЬ ЗАКАЗ</a></div>
@@ -339,14 +339,14 @@
         <a href="#" class="modal-order-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 	
-    <section class="modal-map">
+    <section class="modal-map none">
 	   
 		<a href="#" class="modal-map-close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
 		<img src="img/map.png" width="1736" height="779" alt="Карта с нашим адресом">
 		
     </section>
 	
-	<section class="modal-question">
+	<section class="modal-question none">
 
 		<form class="modal-question-form" action="https://echo.htmlacademy.ru" method="post">
 
@@ -379,14 +379,14 @@
 		
 	</section>
 	
-	<section class="modal modal-authorization">
+	<section class="modal modal-authorization none">
         <h2>Войти в личный кабинет</h2>
         <p>Введите пожалуйста свой логин и пароль</p>
         <!-- Здесь будет форма логина и пароля -->
         <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 	
-	<section class="modal modal-account">
+	<section class="modal modal-account none">
         <h2>Создать личный кабинет</h2>
         <!-- Здесь будет форма логина и пароля -->
         <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
