--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 				<li class="main-product-item">
 					<div class="container-product">
 						<div><img src="img/snippet-32961.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000"></div>
-						<div></div>
+						<div class="container-button-product">
+							<button class="button-product-buy">Купить</button>
+							<button class="button-product-bookmarks">В закладки</button>
+						</div>
 				    </div>
 					<div class="main-promo-new none">new</div>
 					<div class="main-product-item-link"><a href="blank.html">
@@ -124,7 +127,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="container-product">
-						<div class="container-img-product none">
+						<div class="container-img-product">
 							<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 						</div>
 						<div class="container-button-product">
@@ -140,8 +143,12 @@
 					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<div class="container-product">
+					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
 					</div>
 					<div class="main-promo-new none">new</div>
 					<a class="main-product-item-link" href="blank.html">
@@ -151,9 +158,13 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
-				    </div>
+					<div class="container-img-product">
+						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
 					<div class="main-promo-new">new</div>
 					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
