--- a/catalog.html
+++ b/catalog.html
@@ -171,10 +171,14 @@
 				
 			    <ul  class="catalog-products-list">
 				<li  class="main-product-item">
-					<div class="container-product">
+					<div class="container-img-product">
 						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
-					<!-- <span class="new">NEW</span> -->
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new none">new</div>
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
@@ -182,10 +186,29 @@
 						<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->	
+					<div class="container-img-product">
+						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new none">new</div>	
+					<div class="main-product-item-link"><a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a></div>
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
+				</li>
+				<li  class="main-product-item">
+					<div class="container-img-product">
+						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new">new</div>	
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
@@ -194,18 +217,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="container-product">
-					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->	
-					<div class="main-product-item-link"><a href="blank.html">
-						<h3>Перфоратор BOSCH BFG 6000</h3>
-					</a></div>
-					<div class="old-price"><span>30500 Р.</span></div>
-					<div class="button-product"><a href="#">25500 Р.</a></div>					
-				</li>
-				<li  class="main-product-item">
-					<div class="container-product">
-						<div class="container-img-product none">
+						<div class="container-img-product">
 							<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 						</div>
 						<div class="container-button-product">
@@ -221,10 +233,14 @@
 					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->	
+					<div class="container-img-product">
+						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new none">new</div>	
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
@@ -232,10 +248,14 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->
+					<div class="container-img-product">
+						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new">new</div>
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a></div>
@@ -243,10 +263,14 @@
 					<div class="button-product"><a href="#">12500 Р.</a></div>				
 				</li>
 				<li class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->	
+					<div class="container-img-product">
+						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new">new</div>	
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a></div>
@@ -254,10 +278,14 @@
 					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->	
+					<div class="container-img-product">
+						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new none">new</div>	
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a></div>
@@ -265,10 +293,14 @@
 					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li  class="main-product-item">
-					<div class="container-product">
-					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
-				    </div>
-					<!-- <span class="new">NEW</span> -->
+					<div class="container-img-product">
+						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+					</div>
+					<div class="container-button-product">
+						<button class="button-product-buy">Купить</button>
+						<button class="button-product-bookmarks">В закладки</button>
+					</div>
+					<div class="main-promo-new">new</div>
 					<div class="main-product-item-link"><a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a></div>
